[package]
name = "goods"
version = "0.9.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/goods"
homepage = "https://github.com/zaq/goods"
repository = "https://github.com/zaq/goods"

[dependencies]
goods-proc = { version = "=0.1.0", path = "proc" }
treasury = { version = "0.1.0", path = "treasury" }
uuid = "0.8"
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
ron = "0.6"
bincode = "1.3"
ahash = "0.7"
hashbrown = "0.11"
futures = "0.3"
parking_lot = "0.11"
tracing = "0.1"
num_cpus = "1.0"
tokio = { version =  "1.0", features = ["rt", "sync", "parking_lot"] }

[workspace]
members = ["cli", "treasury", "import", "plugin"]
