[package]
name = "goods"
version = "0.7.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/goods"
homepage = "https://github.com/arcana-engine/goods"
repository = "https://github.com/arcana-engine/goods"
description = "Async assets system"
keywords = ["async", "assets", "macro", "derive"]
categories = ["asynchronous", "game-development"]

[features]
treasury = ["treasury-client", "eyre", "url", "dunce"]

[dependencies]
goods-proc = { version = "=0.2.0", path = "proc" }
treasury-client = { version = "0.2.0", optional = true }
thiserror = "1.0"
smallvec = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ahash = "0.7"
hashbrown = "0.12"
futures = "0.3"
parking_lot = "0.12"
spin = "0.9"
tracing = "0.1"
num_cpus = "1.0"
tokio = { version =  "1.0", features = ["rt", "sync", "parking_lot"] }
eyre = { version = "0.6", optional = true }
url = { version = "2.2", optional = true }
dunce =  { version = "1.0", optional = true }

[workspace]
