[package]
name = "treasury-cli"
version = "0.1.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
documentation = "https://docs.rs/treasury-cli"
homepage = "https://github.com/zaq/treasury-cli"
repository = "https://github.com/zaq/treasury-cli"

[[bin]]
name = "treasury"
path = "src/main.rs"

[dependencies]
treasury = { version = "0.1.0", path = "../treasury" }
clap = "3.0.0-beta.2"
tracing = "0.1"
tracing-error = "0.1"
tracing-subscriber = "0.2"
eyre = "0.6"
color-eyre = "0.5"
uuid = { version = "0.8" }
