[package]
name = "goods-treasury-cli"
version = "0.3.0"
edition = "2018"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/treasury"
homepage = "https://github.com/arcana-engine/treasury"
repository = "https://github.com/arcana-engine/treasury"
description = "CLI tool for \"Treasury\""
keywords = ["asset", "cli"]
categories = ["command-line-interface", "game-development"]

[[bin]]
name = "treasury"
path = "src/main.rs"

[dependencies]
goods-treasury = { version = "0.3.0", path = "../treasury", features = ["import"] }
clap = "3.0.0-beta.2"
tracing = "0.1"
tracing-error = "0.1"
tracing-subscriber = "0.2"
eyre = "0.6"
color-eyre = "0.5"
uuid = { version = "0.8" }
