[package]
name = "goods-dataurl"
version = "0.2.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
description = "'data:' url quasi-source for 'goods' asset manager"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/goods-dataurl"
keywords = ["assets", "async", "no_std"]
repository = "https://github.com/zakarumych/goods-dataurl"
readme = "../README.md"

[dependencies]
goods = { version = "0.9.0", path = "../goods" }
eyre = "0.6"
base64 = { version = "0.13" }
futures-core = { version = "0.3" }
