[package]
name = "goods"
version = "0.8.0"
authors = ["zakarumych"]
edition = "2018"
description = "Asset manager for good assets"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/goods"
keywords = ["assets", "no_std", "async", "wasm", "web"]
repository = "https://github.com/zakarumych/goods"
readme = "../README.md"

[features]
trace = ["tracing", "tracing-futures"]

[dependencies]
eyre = "0.6"
futures-core = { version = "0.3" }

tracing = { version = "0.1", features = ["attributes"], optional = true }
tracing-futures = { version = "0.2", features = [], optional = true }
hashbrown = { version = "0.9" }
slab = "0.4"

serde = { version = "1.0", optional = true, features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parking_lot = { version = "0.11", optional = true }

[package.metadata.docs.rs]
targets = [
    "i686-pc-windows-gnu",
    "i686-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "wasm32-unknown-unknown",
]
