[package]
name = "goods-treasury-import"
version = "0.2.0"
edition = "2018"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/treasury-import"
homepage = "https://github.com/arcana-engine/treasury-import"
repository = "https://github.com/arcana-engine/treasury-import"
description = "\"Treasury\" API for importers"
keywords = ["asset", "wasm"]
categories = ["game-development"]

[features]
ffi = []
default = ["ffi"]

[dependencies]
uuid = { version = "0.8" }
eyre = "0.6"
