[package]
name = "goods-proc"
version = "0.2.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/goods-proc"
homepage = "https://github.com/arcana-engine/goods-proc"
repository = "https://github.com/arcana-engine/goods-proc"
description = "Proc-macro for \"goods\" crate"
keywords = ["macro", "derive"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["derive"] }
quote = "1.0"
