[package]
name = "goods-reqwest"
version = "0.2.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
description = "'reqwest' based source for 'goods' asset manager"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/goods-reqwest"
keywords = ["assets", "async"]
repository = "https://github.com/zakarumych/goods-reqwest"
readme = "../README.md"

[dependencies]
goods = { version = "0.9.0", path = "../goods" }
eyre = "0.6"
reqwest = { version = "0.11" }
futures-core = { version = "0.3" }
