[package]
name = "goods-treasury-import-ffi"
version = "0.1.0"
edition = "2018"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/treasury-import-ffi"
homepage = "https://github.com/zakarumych/treasury-import-ffi"
repository = "https://github.com/zakarumych/treasury-import-ffi"
description = "\"Treasury\" API for importers"
keywords = ["asset", "wasm"]
categories = ["game-development"]

[dependencies]
uuid = { version = "0.8" }
eyre = "0.6"
goods-treasury-import = { version = "0.2", path = ".." }
